ajouter swagger de destination
